Closed
Bug 366112
Opened 19 years ago
Closed 19 years ago
[FIX]Crash with naked <xul:nativescrollbar> [@ nsNativeScrollbarFrame::Hookup] [@ nsIFrame::GetContent]
Categories
(Core :: XBL, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(6 keywords)
Crash Data
Attachments
(2 files)
|
201 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
1.19 KB,
patch
|
roc
:
review+
roc
:
superreview+
jay
:
approval1.8.1.2+
jay
:
approval1.8.0.10+
|
Details | Diff | Splinter Review |
Loading the testcase makes Firefox crash.
0 libgklayout.dylib 0x0723be58 nsIFrame::GetContent() const + 20 (nsIFrame.h:530)
1 libgklayout.dylib 0x06c5dd90 nsNativeScrollbarFrame::Hookup() + 240 (nsNativeScrollbarFrame.cpp:304)
2 libgklayout.dylib 0x06c5e118 nsNativeScrollbarFrame::GetPrefSize(nsBoxLayoutState&, nsSize&) + 484 (nsNativeScrollbarFrame.cpp:277)
3 libgklayout.dylib 0x06c545d4 nsSprocketLayout::PopulateBoxSizes(nsIFrame*, nsBoxLayoutState&, nsBoxSize*&, nsComputedBoxSize*&, int&, int&, int&) + 516 (nsSprocketLayout.cpp:822)
This regressed between 2006-12-07 and 2006-12-08 nightlies, so I'm guessing it's a regression from the landing of the reflow branch.
Flags: blocking1.9?
| Reporter | ||
Comment 1•19 years ago
|
||
Comment 2•19 years ago
|
||
Or bug 344228 seems likely
| Assignee | ||
Comment 3•19 years ago
|
||
I assume this is Mac-only, right? Since on Linux I get:
WARNING: Couldn't create native scrollbar!: file
../../../../../mozilla/layout/xul/base/src/nsNativeScrollbarFrame.cpp, line 112
Keywords: pp
| Assignee | ||
Comment 4•19 years ago
|
||
This is indeed a regression from bug 344228.
Assignee: general → bzbarsky
Status: NEW → ASSIGNED
Attachment #250875 -
Flags: superreview?(roc)
Attachment #250875 -
Flags: review?(roc)
| Assignee | ||
Comment 5•19 years ago
|
||
We need this on the branches too, no?
Flags: blocking1.8.1.2?
Flags: blocking1.8.0.10?
Summary: Crash with naked <xul:nativescrollbar> [@ nsNativeScrollbarFrame::Hookup] [@ nsIFrame::GetContent] → [FIX]Crash with naked <xul:nativescrollbar> [@ nsNativeScrollbarFrame::Hookup] [@ nsIFrame::GetContent]
Target Milestone: --- → mozilla1.9alpha
Attachment #250875 -
Flags: superreview?(roc)
Attachment #250875 -
Flags: superreview+
Attachment #250875 -
Flags: review?(roc)
Attachment #250875 -
Flags: review+
Updated•19 years ago
|
Flags: blocking1.8.1.2?
Flags: blocking1.8.1.2+
Flags: blocking1.8.0.10?
Flags: blocking1.8.0.10+
Comment 6•19 years ago
|
||
Comment on attachment 250875 [details] [diff] [review]
Fix
Approved for both branches, a=jay for drivers,
Attachment #250875 -
Flags: approval1.8.1.2+
Attachment #250875 -
Flags: approval1.8.0.10+
| Assignee | ||
Comment 7•19 years ago
|
||
Fixed on trunk and both branches.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.0.10,
fixed1.8.1.2
Resolution: --- → FIXED
Comment 8•19 years ago
|
||
verified on the 1.8 branch using Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1.2pre) Gecko/20070110 BonEcho/2.0.0.2pre. No crash using the testcase. Adding keyword.
Keywords: fixed1.8.1.2 → verified1.8.1.2
Comment 9•19 years ago
|
||
verified on the 1.8.0 branch using
Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.10pre) Gecko/20070130 Firefox/1.5.0.10pre
No crash using provided testcase. Adding keyword.
Keywords: fixed1.8.0.10 → verified1.8.0.10
Updated•19 years ago
|
Flags: blocking1.9?
Updated•19 years ago
|
Flags: in-testsuite?
Updated•15 years ago
|
Crash Signature: [@ nsNativeScrollbarFrame::Hookup]
[@ nsIFrame::GetContent]
You need to log in
before you can comment on or make changes to this bug.
Description
•