We might not have a scrollbar frame; deal with that.  Bug 366112, r+sr=roc, a=jay for 1.8.0 and 1.8.1 branches